Updated api documentation
