# controller/api/Deliveries.php
@@ -26,9 +26,11 @@ namespace oat\taoPublishing\controller\api;
 use common_exception_BadRequest;
 use common_exception_MissingParameter;
 use common_exception_NotImplemented;
+use common_exception_RestApi;
 use Exception;
 use oat\tao\model\taskQueue\TaskLogActionTrait;
 use oat\taoPublishing\model\publishing\delivery\RemotePublishingService;
+use oat\taoPublishing\model\publishing\exception\PublishingInvalidArgumentException;
 
 class Deliveries extends \tao_actions_RestController
 {
@@ -50,7 +52,7 @@ class Deliveries extends \tao_actions_RestController
      *     description="Publish delivery to remote environment",
      *     @OA\Response(
      *         response="200",
-     *         description="Platform data",
+     *         description="Delivery publishing successful",
      *         @OA\MediaType(
      *             mediaType="application/json",
      *             @OA\Schema(
@@ -66,6 +68,10 @@ class Deliveries extends \tao_actions_RestController
      *                         ref="#/components/schemas/TaskLog",
      *                     ),
      *                 ),
+     *                 @OA\Property(
+     *                     property="version",
+     *                     type="string",
+     *                 ),
      *                 example= {
      *                     "success": true,
      *                     "data": {
@@ -79,7 +85,42 @@ class Deliveries extends \tao_actions_RestController
      *                                 }
      *                             }
      *                         }
-     *                     }
+     *                     },
+     *                     "version": "3.4.0-sprint131"
+     *                 }
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Delivery publishing bad request",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="success",
+     *                     type="boolean",
+     *                     description="`false` on failure, `true` on success",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="errorCode",
+     *                     type="string",
+     *                     description="Exception error code",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="errorMsg",
+     *                     type="string",
+     *                     description="Exception message",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="version",
+     *                     type="string",
+     *                 ),
+     *                 example= {
+     *                     "success": false,
+     *                     "errorCode": 0,
+     *                     "errorMsg": "Delivery resource with URI 'http://BAD/URI.rdf#i1' does not exist.",
+     *                     "version": "3.4.0-sprint131"
      *                 }
      *             )
      *         ),
@@ -149,6 +190,8 @@ class Deliveries extends \tao_actions_RestController
             }
 
             return $this->returnSuccess($response);
+        } catch (PublishingInvalidArgumentException $e) {
+            $this->returnFailure(new common_exception_RestApi($e->getUserMessage()));
         } catch (Exception $e) {
             $this->returnFailure($e);
         }
